--- a/po/fr.po
+++ b/po/fr.po
@@ -1,3 +1,24 @@
+# Frech translation for Inspector.
+# Copyright (C) 2023 Inspector's COPYRIGHT HOLDER
+# This file is distributed under the same license as the Inspector package.
+#
+#
+#
+msgid ""
+msgstr ""
+"Project-Id-Version: Inspector\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2023-09-09 02:37+0300\n"
+"PO-Revision-Date: 2023-09-09 02:37+0300\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: fr\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
+"X-Generator: Poedit 3.2.2\n"
+
 #: data/io.github.nokse22.inspector.desktop.in:3
 #: data/io.github.nokse22.inspector.appdata.xml.in:6 src/main.py:66
 #: src/window.py:35
